# voyage

./: .bash_history  .bashrc  .bashrc.backup.1760313370  .bashrc.backup.1760313823  .gitconfig  .gitignore  .npmrc  .python_history  .termux.rc  .wget-hsts  CNAME  android_env_bash.sh  first_script.sh.save  index.js  package-lock.json  package.json  package.json.bak  system_diagnostic_20251114_061340.txt  termux-setup.sh  termux_setup_and_info.sh
.android/cache/: sdkinf-1_029f9a26-sys-img2-4_xml  sdkinf-1_02d73479-sys-img2-4_xml  sdkinf-1_2193743a-addon2-3_xml  sdkinf-1_3bb7c63e-sys-img2-4_xml  sdkinf-1_485070ac-sys-img2-4_xml  sdkinf-1_53ed092d-addon2-3_xml  sdkinf-1_678e6ea3-sys-img2-4_xml  sdkinf-1_6dd634b6-sys-img2-4_xml  sdkinf-1_706db414-sys-img2-4_xml  sdkinf-1_72847604-sys-img2-4_xml  sdkinf-1_7577a689-sys-img2-4_xml  sdkinf-1_8f4284d5-sys-img2-4_xml  sdkinf-1_a37be9bd-sys-img2-4_xml  sdkinf-1_b743781d-repository2-2_xml  sdkinf-1_b7518f9e-repository2-3_xml  sdkinf-1_bdaee495-sys-img2-4_xml  sdkinf-1_c45a1453-sys-img2-4_xml  sdkinf-1_d1e71dd8-sys-img2-4_xml  sdkinf-1_d2c7e9a3-addons_list-6_xml  (+2 more)
.pm2/: dump.pm2  dump.pm2.bak  touch
.ssh/: id_ed25519  id_ed25519.pub
.termux/: termux.properties
downloads/: JustDeleteMe JSON Parser  app.jsx  pagarxdning  runlite
others/: veridex
projects/Recipe-Card-Generator/: pyproject.toml
projects/Recipe-Card-Generator/src/recipe_gen/: __main__.py  ocr_pipeline.py  preprocessing.py
scripts/: setup.sh
sherpa-onnx-online-punct-en-2024-08-06/: README.md
termux_backups/: packages_20251114_073913.txt
(+46 files in other folders)
